--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.19.0",
     "@types/node": "22.5.1",
     "@types/react": "18.3.4",
     "@types/react-dom": "18.3.0",
@@ -23,5 +24,8 @@
     "react-icons": "^4.11.0",
     "tailwindcss": "3.4.10",
     "typescript": "5.5.4"
+  },
+  "devDependencies": {
+    "prisma": "^5.19.0"
   }
 }
