--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "@types/react": "18.3.4",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
+    "axios": "^1.7.5",
     "classnames": "^2.3.2",
+    "easymde": "^2.18.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.7",
     "next": "14.2.7",
     "postcss": "8.4.41",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
+    "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "3.4.10",
     "typescript": "5.5.4",
     "zod": "^3.23.8"
