--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@prisma/client": "^5.19.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.3",
     "@types/node": "22.5.1",
     "@types/react": "18.3.4",
@@ -29,12 +30,14 @@
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
     "react-loading-skeleton": "^3.3.1",
+    "react-markdown": "^8.0.7",
     "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "3.4.10",
     "typescript": "5.5.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "prisma": "^5.19.0"
   }
 }
